--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: store-pvc
+  name: music-store-1-pvc
 spec:
   accessModes:
     - ReadWriteOnce
@@ -12,41 +12,41 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: store-app
+  name: music-store-1
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: store-app
+      app: music-store-1
   template:
     metadata:
       labels:
-        app: store-app
+        app: music-store-1
     spec:
       containers:
-      - name: store-app
-        image: store-app:latest # Change to your image repo if pushing to a registry
+      - name: music-store-1
+        image: music-store-1:latest # Change to your image repo if pushing to a registry
         ports:
         - containerPort: 5000
         env:
         - name: DB_PATH
-          value: /data/store.db
+          value: /data/music_store.db
         volumeMounts:
-        - name: store-data
+        - name: music-store-1-data
           mountPath: /data
       volumes:
-      - name: store-data
+      - name: music-store-1-data
         persistentVolumeClaim:
-          claimName: store-pvc
+          claimName: music-store-1-pvc
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: store-service
+  name: music-store-1-service
 spec:
   type: NodePort
   selector:
-    app: store-app
+    app: music-store-1
   ports:
     - protocol: TCP
       port: 5000
