--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -30,15 +30,25 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Debug repository info
+        run: |
+          echo "Repository: ${{ github.repository }}"
+          echo "Repository owner: ${{ github.repository_owner }}"
+          echo "Repository name: ${{ github.event.repository.name }}"
+          echo "Event repository: ${{ github.event.repository.full_name }}"
+
       - name: Set image name
-        run: echo "IMAGE_NAME=$(echo ${{ github.event.repository.name }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+        run: |
+          REPO_NAME=$(echo "${{ github.repository }}" | cut -d'/' -f2 | tr '[:upper:]' '[:lower:]')
+          echo "REPO_NAME=$REPO_NAME" >> $GITHUB_ENV
+          echo "Final image name: ghcr.io/${{ github.repository_owner }}/$REPO_NAME:${{ github.event.inputs.image_tag }}"
 
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ github.event.inputs.image_tag }}
+          tags: ghcr.io/${{ github.repository_owner }}/${{ env.REPO_NAME }}:${{ github.event.inputs.image_tag }}
 
       - name: Success message
-        run: echo "Successfully built and pushed ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ github.event.inputs.image_tag }}" 
+        run: echo "Successfully built and pushed ghcr.io/${{ github.repository_owner }}/${{ env.REPO_NAME }}:${{ github.event.inputs.image_tag }}" 
