--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -39,16 +39,18 @@ jobs:
 
       - name: Set image name
         run: |
+          OWNER_NAME=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
           REPO_NAME=$(echo "${{ github.repository }}" | cut -d'/' -f2 | tr '[:upper:]' '[:lower:]')
+          echo "OWNER_NAME=$OWNER_NAME" >> $GITHUB_ENV
           echo "REPO_NAME=$REPO_NAME" >> $GITHUB_ENV
-          echo "Final image name: ghcr.io/${{ github.repository_owner }}/$REPO_NAME:${{ github.event.inputs.image_tag }}"
+          echo "Final image name: ghcr.io/$OWNER_NAME/$REPO_NAME:${{ github.event.inputs.image_tag }}"
 
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/${{ env.REPO_NAME }}:${{ github.event.inputs.image_tag }}
+          tags: ghcr.io/${{ env.OWNER_NAME }}/${{ env.REPO_NAME }}:${{ github.event.inputs.image_tag }}
 
       - name: Success message
-        run: echo "Successfully built and pushed ghcr.io/${{ github.repository_owner }}/${{ env.REPO_NAME }}:${{ github.event.inputs.image_tag }}" 
+        run: echo "Successfully built and pushed ghcr.io/${{ env.OWNER_NAME }}/${{ env.REPO_NAME }}:${{ github.event.inputs.image_tag }}" 
