--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -30,15 +30,26 @@ spec:
         ports:
         - containerPort: 5000
         env:
-        - name: DB_PATH
-          value: /data/music_store.db
+        - name: CART_SERVICE_URL
+          value: "http://cart-service:5002"
+        - name: ORDER_SERVICE_URL
+          value: "http://order-service:5001"
+        - name: DB_HOST
+          value: "postgres-service"
+        - name: DB_PORT
+          value: "5432"
+        - name: DB_NAME
+          value: "music_store"
+        - name: DB_USER
+          value: "music_user"
+        - name: DB_PASSWORD
+          value: "music_password"
         volumeMounts:
-        - name: music-store-1-data
-          mountPath: /data
+        - name: static-files
+          mountPath: /app/static
       volumes:
-      - name: music-store-1-data
-        persistentVolumeClaim:
-          claimName: music-store-1-pvc
+      - name: static-files
+        emptyDir: {}
 ---
 apiVersion: v1
 kind: Service
