--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
       id-token: write
 
@@ -99,6 +99,15 @@ jobs:
             ghcr.io/${{ env.OWNER_NAME }}/${{ env.REPO_NAME }}-order:${{ env.VERSION }}
             ghcr.io/${{ env.OWNER_NAME }}/${{ env.REPO_NAME }}-order:latest
 
+      - name: Build and push Database Service
+        uses: docker/build-push-action@v5
+        with:
+          context: ./database-service
+          push: true
+          tags: |
+            ghcr.io/${{ env.OWNER_NAME }}/${{ env.REPO_NAME }}-database:${{ env.VERSION }}
+            ghcr.io/${{ env.OWNER_NAME }}/${{ env.REPO_NAME }}-database:latest
+
       - name: Update Kubernetes deployment files
         run: |
           # Update the main k8s deployment for store service
@@ -109,12 +118,15 @@ jobs:
           
           # Update order service deployment
           sed -i "s|image: ghcr.io/niranec77/.*-order:.*|image: ghcr.io/${{ env.OWNER_NAME }}/${{ env.REPO_NAME }}-order:${{ env.VERSION }}|" k8s-order-deployment.yaml
+          
+          # Update database service deployment
+          sed -i "s|image: postgres:15-alpine|image: ghcr.io/${{ env.OWNER_NAME }}/${{ env.REPO_NAME }}-database:${{ env.VERSION }}|" k8s-database-deployment.yaml
 
       - name: Commit and push changes
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add VERSION k8s-deployment.yaml k8s-cart-deployment.yaml k8s-order-deployment.yaml
+          git add VERSION k8s-deployment.yaml k8s-cart-deployment.yaml k8s-order-deployment.yaml k8s-database-deployment.yaml
           git commit -m "Auto-increment version to ${{ env.VERSION }} and update all k8s deployments" || echo "No changes to commit"
           git push origin main || echo "Push failed or no changes"
 
@@ -134,12 +146,18 @@ jobs:
           echo "  - ghcr.io/${{ env.OWNER_NAME }}/${{ env.REPO_NAME }}-order:${{ env.VERSION }}"
           echo "  - ghcr.io/${{ env.OWNER_NAME }}/${{ env.REPO_NAME }}-order:latest"
           echo ""
+          echo "🗄️ Database Service:"
+          echo "  - ghcr.io/${{ env.OWNER_NAME }}/${{ env.REPO_NAME }}-database:${{ env.VERSION }}"
+          echo "  - ghcr.io/${{ env.OWNER_NAME }}/${{ env.REPO_NAME }}-database:latest"
+          echo ""
           echo "📝 Updated Kubernetes deployment files:"
           echo "  - k8s-deployment.yaml (Store Service)"
           echo "  - k8s-cart-deployment.yaml (Cart Service)"
           echo "  - k8s-order-deployment.yaml (Order Service)"
+          echo "  - k8s-database-deployment.yaml (Database Service)"
           echo ""
           echo "🚀 To deploy all services to Kubernetes, run:"
+          echo "kubectl apply -f k8s-database-deployment.yaml"
           echo "kubectl apply -f k8s-deployment.yaml"
           echo "kubectl apply -f k8s-cart-deployment.yaml"
           echo "kubectl apply -f k8s-order-deployment.yaml"
