added storage class to pvc

--- a/k8s-database-deployment.yaml
+++ b/k8s-database-deployment.yaml
@@ -60,6 +60,7 @@ spec:
       - name: init-script
         configMap:
           name: postgres-init-script
+      storageClassName: vsan-default-storage-policy
 ---
 apiVersion: v1
 kind: ConfigMap
