Add VMware vSAN storage class to all PVCs for proper storage provisioning

--- a/k8s-database-deployment.yaml
+++ b/k8s-database-deployment.yaml
@@ -3,6 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: postgres-pvc
 spec:
+  storageClassName: vsan-default-storage-policy
   accessModes:
     - ReadWriteOnce
   resources:
