--- a/k8s-order-deployment.yaml
+++ b/k8s-order-deployment.yaml
@@ -1,4 +1,16 @@
 apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: order-pvc
+spec:
+  storageClassName: vsan-default-storage-policy
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: order-service
@@ -32,4 +44,11 @@ spec:
         - containerPort: 5001
         env:
         - name: STORE_SERVICE_URL
-          value: "http://store-service:5000" 
+          value: "http://store-service:5000"
+        volumeMounts:
+        - name: order-data
+          mountPath: /app
+      volumes:
+      - name: order-data
+        persistentVolumeClaim:
+          claimName: order-pvc 
