--- a/k8s-cart-deployment.yaml
+++ b/k8s-cart-deployment.yaml
@@ -40,6 +40,7 @@ spec:
       containers:
       - name: cart-service
         image: ghcr.io/niranec77/example-music-store-1-cart:1.0.4
+        imagePullPolicy: Always
         ports:
         - containerPort: 5002
         env:
