--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -26,7 +26,8 @@ spec:
     spec:
       containers:
       - name: music-store-1
-        image: ghcr.io/niranec77/example-music-store-1-store:1.0.2
+        image: ghcr.io/niranec77/example-music-store-1-store:1.0.4
+        imagePullPolicy: Always
         ports:
         - containerPort: 5000
         env:
