Fix Kubernetes service port names to resolve ArgoCD validation error

--- a/k8s-cart-deployment.yaml
+++ b/k8s-cart-deployment.yaml
@@ -18,7 +18,8 @@ spec:
   selector:
     app: cart-service
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 5002
       targetPort: 5002
   type: LoadBalancer
