--- a/k8s-database-deployment.yaml
+++ b/k8s-database-deployment.yaml
@@ -18,7 +18,8 @@ spec:
   selector:
     app: postgres
   ports:
-    - protocol: TCP
+    - name: postgresql
+      protocol: TCP
       port: 5432
       targetPort: 5432
   type: ClusterIP
