--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -56,6 +56,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: music-store-1-service
+  # Updated with proper port names for ArgoCD validation
 spec:
   type: LoadBalancer
   selector:
