--- a/k8s-order-deployment.yaml
+++ b/k8s-order-deployment.yaml
@@ -14,6 +14,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: order-service
+  # Updated with proper port names for ArgoCD validation
 spec:
   selector:
     app: order-service
