--- a/k8s-cart-deployment.yaml
+++ b/k8s-cart-deployment.yaml
@@ -23,6 +23,7 @@ spec:
       protocol: TCP
       port: 5002
       targetPort: 5002
+      nodePort: 30008
   type: LoadBalancer
 ---
 apiVersion: apps/v1
