--- a/k8s-order-deployment.yaml
+++ b/k8s-order-deployment.yaml
@@ -23,6 +23,7 @@ spec:
       protocol: TCP
       port: 5001
       targetPort: 5001
+      nodePort: 30009
   type: LoadBalancer
 ---
 apiVersion: apps/v1
