Fix three critical issues: 1) Remove LoadBalancer from cart/order services (internal only), 2) Update database with new album cover URLs, 3) Fix checkout form action

--- a/k8s-cart-deployment.yaml
+++ b/k8s-cart-deployment.yaml
@@ -23,8 +23,7 @@ spec:
       protocol: TCP
       port: 5002
       targetPort: 5002
-      nodePort: 30008
-  type: LoadBalancer
+  type: ClusterIP
 ---
 apiVersion: apps/v1
 kind: Deployment
