--- a/k8s-order-deployment.yaml
+++ b/k8s-order-deployment.yaml
@@ -23,8 +23,7 @@ spec:
       protocol: TCP
       port: 5001
       targetPort: 5001
-      nodePort: 30009
-  type: LoadBalancer
+  type: ClusterIP
 ---
 apiVersion: apps/v1
 kind: Deployment
