--- a/k8s-database-deployment.yaml
+++ b/k8s-database-deployment.yaml
@@ -53,6 +53,8 @@ spec:
           value: "music_password"
         - name: PGDATA
           value: "/var/lib/postgresql/data/pgdata"
+        - name: DB_VERSION
+          value: "1.0.6"
         volumeMounts:
         - name: postgres-storage
           mountPath: /var/lib/postgresql/data
@@ -72,6 +74,31 @@ metadata:
   name: postgres-init-script
 data:
   init.sql: |
+    -- Create version table to track database schema version
+    CREATE TABLE IF NOT EXISTS db_version (
+        id INTEGER PRIMARY KEY,
+        version VARCHAR(50) NOT NULL,
+        applied_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
+    );
+
+    -- Check current version
+    DO $$
+    DECLARE
+        current_version VARCHAR(50);
+    BEGIN
+        SELECT version INTO current_version FROM db_version WHERE id = 1;
+        
+        -- If version is different or doesn't exist, reinitialize
+        IF current_version IS NULL OR current_version != '1.0.6' THEN
+            -- Drop existing tables
+            DROP TABLE IF EXISTS albums CASCADE;
+            
+            -- Update version
+            DELETE FROM db_version WHERE id = 1;
+            INSERT INTO db_version (id, version) VALUES (1, '1.0.6');
+        END IF;
+    END $$;
+
     -- Create albums table
     CREATE TABLE IF NOT EXISTS albums (
         id SERIAL PRIMARY KEY,
