--- a/k8s-database-deployment.yaml
+++ b/k8s-database-deployment.yaml
@@ -41,7 +41,7 @@ spec:
     spec:
       containers:
       - name: postgres
-        image: ghcr.io/niranec77/example-music-store-1-database:1.0.16
+        image: ghcr.io/niranec77/example-music-store-1-database:latest
         ports:
         - containerPort: 5432
         env:
@@ -53,8 +53,7 @@ spec:
           value: "music_password"
         - name: PGDATA
           value: "/var/lib/postgresql/data/pgdata"
-        - name: DB_VERSION
-          value: "1.0.16"
+        # No hardcoded version - let database initialize naturally
         volumeMounts:
         - name: postgres-storage
           mountPath: /var/lib/postgresql/data
@@ -74,30 +73,8 @@ metadata:
   name: postgres-init-script
 data:
   init.sql: |
-    -- Create version table to track database schema version
-    CREATE TABLE IF NOT EXISTS db_version (
-        id INTEGER PRIMARY KEY,
-        version VARCHAR(50) NOT NULL,
-        applied_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
-    );
-
-    -- Check current version
-    DO $$
-    DECLARE
-        current_version VARCHAR(50);
-    BEGIN
-        SELECT version INTO current_version FROM db_version WHERE id = 1;
-        
-        -- If version is different or doesn't exist, reinitialize
-        IF current_version IS NULL OR current_version != '1.0.16' THEN
-            -- Drop existing tables
-            DROP TABLE IF EXISTS albums CASCADE;
-            
-            -- Update version
-            DELETE FROM db_version WHERE id = 1;
-            INSERT INTO db_version (id, version) VALUES (1, '1.0.16');
-        END IF;
-    END $$;
+    -- Simple initialization - always recreate tables with latest data
+    DROP TABLE IF EXISTS albums CASCADE;
 
     -- Create albums table
     CREATE TABLE IF NOT EXISTS albums (
