🎨 Remove hover animations, brighten background, add restart annotations for proper container updates

--- a/k8s-cart-deployment.yaml
+++ b/k8s-cart-deployment.yaml
@@ -38,6 +38,8 @@ spec:
     metadata:
       labels:
         app: cart-service
+      annotations:
+        kubernetes.io/change-cause: "Updated styling - brighter background"
     spec:
       containers:
       - name: cart-service
