--- a/k8s-order-deployment.yaml
+++ b/k8s-order-deployment.yaml
@@ -38,6 +38,8 @@ spec:
     metadata:
       labels:
         app: order-service
+      annotations:
+        kubernetes.io/change-cause: "Updated styling - brighter background"
     spec:
       containers:
       - name: order-service
