🔧 Fix all issues: cart session management, remove-item routes, brighter metal theme, checkout styling, cool success message

--- a/k8s-cart-deployment.yaml
+++ b/k8s-cart-deployment.yaml
@@ -39,7 +39,7 @@ spec:
       labels:
         app: cart-service
       annotations:
-        kubernetes.io/change-cause: "Updated styling - brighter background"
+        kubernetes.io/change-cause: "Fixed cart session management, metal checkout theme, cool success message"
     spec:
       containers:
       - name: cart-service
