Add authentication system with users service and admin panel
- Create new users-service with Flask authentication
- Add default admin user (username: admin, password: admin)
- Replace admin tab with 'Store Administration' button in top right
- Add login modal with authentication
- Create separate admin panel page with proper authentication
- Add token-based session management
- Update docker-compose.yml to include users service
- Add authentication routes to main app
- Implement proper admin-only access control
- Add logout functionality and session verification

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
     environment:
       - CART_SERVICE_URL=http://cart-service:5002
       - ORDER_SERVICE_URL=http://order-service:5001
+      - USERS_SERVICE_URL=http://users-service:5003
       - DB_HOST=postgres
       - DB_PORT=5432
       - DB_NAME=music_store
@@ -38,6 +39,8 @@ services:
       cart-service:
         condition: service_started
       order-service:
+        condition: service_started
+      users-service:
         condition: service_started
 
   cart-service:
@@ -62,7 +65,17 @@ services:
     volumes:
       - order-data:/app
 
+  users-service:
+    build: ./users-service
+    ports:
+      - "5003:5003"
+    environment:
+      - USERS_DB_PATH=/app/users.db
+    volumes:
+      - users-data:/app
+
 volumes:
   postgres_data:
   cart-data:
-  order-data: 
+  order-data:
+  users-data: 
