--- a/k8s-users-deployment.yaml
+++ b/k8s-users-deployment.yaml
@@ -71,6 +71,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: users-pvc
 spec:
+  storageClassName: vsan-default-storage-policy
   accessModes:
     - ReadWriteOnce
   resources:
