--- a/users-service/Dockerfile
+++ b/users-service/Dockerfile
@@ -5,7 +5,8 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+# Copy the application files explicitly
+COPY app.py .
 
 EXPOSE 5003
 
