Enhanced users service Dockerfile with debugging and explicit paths
- Use explicit COPY with absolute path: COPY app.py /app/app.py
- Add debugging commands to verify file exists during build
- Use absolute path in CMD: python /app/app.py
- Should resolve 'No such file or directory' error

--- a/users-service/Dockerfile
+++ b/users-service/Dockerfile
@@ -5,9 +5,10 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the application files explicitly
-COPY app.py .
+# Copy the application file and verify it exists
+COPY app.py /app/app.py
+RUN ls -la /app/ && echo "Checking if app.py exists:" && test -f /app/app.py && echo "app.py found!"
 
 EXPOSE 5003
 
-CMD ["python", "app.py"] 
+CMD ["python", "/app/app.py"] 
