Add startup script to users service for better debugging
- Create a startup script that shows current directory and files
- Use relative path COPY app.py . instead of absolute path
- Run the script instead of direct python command
- Will help identify exactly what's happening during container startup

--- a/users-service/Dockerfile
+++ b/users-service/Dockerfile
@@ -5,10 +5,18 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the application file and verify it exists
-COPY app.py /app/app.py
-RUN ls -la /app/ && echo "Checking if app.py exists:" && test -f /app/app.py && echo "app.py found!"
+# Copy the application file
+COPY app.py .
+
+# Create a startup script
+RUN echo '#!/bin/bash' > start.sh && \
+    echo 'echo "Current directory: $(pwd)"' >> start.sh && \
+    echo 'echo "Files in current directory:"' >> start.sh && \
+    echo 'ls -la' >> start.sh && \
+    echo 'echo "Starting users service..."' >> start.sh && \
+    echo 'python app.py' >> start.sh && \
+    chmod +x start.sh
 
 EXPOSE 5003
 
-CMD ["python", "/app/app.py"] 
+CMD ["./start.sh"] 
