Simplify users service Dockerfile for better debugging
- Remove complex startup script
- Use simple shell form CMD for better error messages
- Add build-time debugging with pwd and ls -la
- Should show exactly what's happening during build and startup

--- a/users-service/Dockerfile
+++ b/users-service/Dockerfile
@@ -8,15 +8,10 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy the application file
 COPY app.py .
 
-# Create a startup script
-RUN echo '#!/bin/bash' > start.sh && \
-    echo 'echo "Current directory: $(pwd)"' >> start.sh && \
-    echo 'echo "Files in current directory:"' >> start.sh && \
-    echo 'ls -la' >> start.sh && \
-    echo 'echo "Starting users service..."' >> start.sh && \
-    echo 'python app.py' >> start.sh && \
-    chmod +x start.sh
+# Debug: Show what's in the container
+RUN pwd && ls -la
 
 EXPOSE 5003
 
-CMD ["./start.sh"] 
+# Use shell form to get better error messages
+CMD python app.py 
