Fix users service Dockerfile - match working services exactly
- Revert to exact same pattern as cart-service and order-service
- Use COPY . . instead of explicit file copying
- Use array form CMD like working services
- Remove all debugging that was causing issues
- Should now work like the other services

--- a/users-service/Dockerfile
+++ b/users-service/Dockerfile
@@ -2,16 +2,11 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY requirements.txt .
+COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the application file
-COPY app.py .
-
-# Debug: Show what's in the container
-RUN pwd && ls -la
+COPY . .
 
 EXPOSE 5003
 
-# Use shell form to get better error messages
-CMD python app.py 
+CMD ["python", "app.py"] 
