Completely rewrite users service Dockerfile with explicit paths
- Use absolute paths for all COPY operations
- Add explicit file verification during build
- Use absolute path in CMD
- Add build-time debugging to see exactly what's happening
- This should definitively resolve the file not found issue

--- a/users-service/Dockerfile
+++ b/users-service/Dockerfile
@@ -1,13 +1,19 @@
 FROM python:3.11-slim
 
+# Set working directory
 WORKDIR /app
 
-COPY requirements.txt ./
-RUN pip install --no-cache-dir -r requirements.txt
+# Copy requirements first for better caching
+COPY requirements.txt /app/requirements.txt
+RUN pip install --no-cache-dir -r /app/requirements.txt
 
-COPY . .
+# Copy all source files
+COPY app.py /app/app.py
+
+# Verify the file exists
+RUN ls -la /app/ && echo "app.py should be here:" && test -f /app/app.py && echo "SUCCESS: app.py found!"
 
 EXPOSE 5003
 
-# Users service - authentication and user management
-CMD ["python", "app.py"] 
+# Start the application
+CMD ["python", "/app/app.py"] 
