Fix users service volume mount - mount in subdirectory not root
- Change volume mount from /app to /app/data (like cart-service)
- Update USERS_DB_PATH to /app/data/users.db
- This prevents volume from overwriting app.py and other files
- Should resolve the 'No such file or directory' error

--- a/k8s-users-deployment.yaml
+++ b/k8s-users-deployment.yaml
@@ -21,12 +21,12 @@ spec:
         - containerPort: 5003
         env:
         - name: USERS_DB_PATH
-          value: "/app/users.db"
+          value: "/app/data/users.db"
         - name: FLASK_ENV
           value: "production"
         volumeMounts:
         - name: users-data
-          mountPath: /app
+          mountPath: /app/data
         resources:
           requests:
             memory: "128Mi"
