--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -28,10 +28,27 @@ spec:
         date: "2024-01-$(date +%d)"
         timestamp: "$(date +%s)"
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
+        seccompProfile:
+          type: RuntimeDefault
       containers:
       - name: music-store-1
         image: ghcr.io/niranec77/example-music-store-1-store:latest
         imagePullPolicy: Always
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+            - ALL
+          runAsNonRoot: true
+          runAsUser: 1000
+          runAsGroup: 1000
+          seccompProfile:
+            type: RuntimeDefault
         ports:
         - containerPort: 5000
         env:
