--- a/k8s-order-deployment.yaml
+++ b/k8s-order-deployment.yaml
@@ -41,10 +41,27 @@ spec:
       annotations:
         kubernetes.io/change-cause: "Updated styling - brighter background and metal theme"
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
+        seccompProfile:
+          type: RuntimeDefault
       containers:
       - name: order-service
         image: ghcr.io/niranec77/example-music-store-1-order:1.0.47
         imagePullPolicy: Always
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+            - ALL
+          runAsNonRoot: true
+          runAsUser: 1000
+          runAsGroup: 1000
+          seccompProfile:
+            type: RuntimeDefault
         ports:
         - containerPort: 5001
         env:
