--- a/k8s-users-deployment.yaml
+++ b/k8s-users-deployment.yaml
@@ -14,9 +14,26 @@ spec:
       labels:
         app: users-service
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
+        seccompProfile:
+          type: RuntimeDefault
       containers:
       - name: users-service
         image: ghcr.io/niranec77/example-music-store-1-users:1.0.47
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+            - ALL
+          runAsNonRoot: true
+          runAsUser: 1000
+          runAsGroup: 1000
+          seccompProfile:
+            type: RuntimeDefault
         ports:
         - containerPort: 5003
         env:
