Update storage class from vsan-default-storage-policy to vcfa-storage-policy

--- a/k8s-cart-deployment.yaml
+++ b/k8s-cart-deployment.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: cart-pvc
 spec:
-  storageClassName: vsan-default-storage-policy
+  storageClassName: vcfa-storage-policy
   accessModes:
     - ReadWriteOnce
   resources:
