--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: music-store-1-pvc
 spec:
-  storageClassName: vsan-default-storage-policy
+  storageClassName: vcfa-storage-policy
   accessModes:
     - ReadWriteOnce
   resources:
